// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  Hello world
</p>
`;

exports[`composition hook should return with Container props 1`] = `
Object {
  "className": "css-xakwjy css-63it0p css-1qnz8fc bb-Box bb-Container",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for breakpoint 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.emotion-0 {
  max-width: 1024px;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Container"
>
  hello world
</div>
`;

exports[`defaultProps should render correctly for isFluid 1`] = `
.emotion-0 {
  width: 100%;
  padding-left: 2rem;
  padding-right: 2rem;
}

@media (max-width: 768px) {
  .emotion-0 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  hello world
</div>
`;

exports[`defaultProps should render correctly for isLayout 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 768px) {
  .emotion-0 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  hello world
</div>
`;

exports[`overrides Container.base should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  hello world
</div>
`;

exports[`overrides Container.fluid should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  padding-left: 2rem;
  padding-right: 2rem;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

@media (max-width: 768px) {
  .emotion-0 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  hello world
</div>
`;

exports[`overrides Container.fluidMargin should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  padding-left: 3rem;
  padding-right: 3rem;
}

@media (max-width: 768px) {
  .emotion-0 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  hello world
</div>
`;

exports[`overrides Container.layout should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 768px) {
  .emotion-0 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  hello world
</div>
`;

exports[`overrides Container.tabletMargin should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 768px) {
  .emotion-0 {
    padding-left: 5rem;
    padding-right: 5rem;
  }
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  hello world
</div>
`;

exports[`props alignment renders correctly for a center aligned container 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  test
</div>
`;

exports[`props alignment renders correctly for a left aligned container 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-right: auto;
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  test
</div>
`;

exports[`props alignment renders correctly for a right aligned container 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  test
</div>
`;

exports[`props fixed width renders correctly when breakpoint is desktop 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.emotion-0 {
  max-width: 1024px;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  test
</div>
`;

exports[`props fixed width renders correctly when breakpoint is fullHD 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.emotion-0 {
  max-width: 1440px;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  test
</div>
`;

exports[`props fixed width renders correctly when breakpoint is mobile 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.emotion-0 {
  max-width: 480px;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  test
</div>
`;

exports[`props fixed width renders correctly when breakpoint is tablet 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.emotion-0 {
  max-width: 768px;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  test
</div>
`;

exports[`props fixed width renders correctly when breakpoint is widescreen 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.emotion-0 {
  max-width: 1200px;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  test
</div>
`;

exports[`props fluid renders correctly for a fluid container 1`] = `
.emotion-0 {
  width: 100%;
  padding-left: 2rem;
  padding-right: 2rem;
}

@media (max-width: 768px) {
  .emotion-0 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  test
</div>
`;

exports[`props layout renders correctly for a layout container 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 768px) {
  .emotion-0 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  test
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  Hello world
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  Hello world
</div>
`;

exports[`theming Container.base should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  hello world
</div>
`;

exports[`theming Container.fluid should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  padding-left: 2rem;
  padding-right: 2rem;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

@media (max-width: 768px) {
  .emotion-0 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  hello world
</div>
`;

exports[`theming Container.fluidMargin should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  padding-left: 3rem;
  padding-right: 3rem;
}

@media (max-width: 768px) {
  .emotion-0 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  hello world
</div>
`;

exports[`theming Container.layout should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 768px) {
  .emotion-0 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  hello world
</div>
`;

exports[`theming Container.tabletMargin should render correctly 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 768px) {
  .emotion-0 {
    padding-left: 5rem;
    padding-right: 5rem;
  }
}

@media (max-width: 1568px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

@media (max-width: 1328px) {
  .emotion-0 {
    max-width: 1024px;
  }
}

@media (max-width: 1152px) {
  .emotion-0 {
    max-width: 768px;
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Container"
>
  hello world
</div>
`;
